cpp/test/Slice/errorDetection/IllegalMetadata.ice
// Copyright (c) ZeroC, Inc.
    
[["suppress-warning"]] // okay
<<<<<<< Updated upstream
module Hello {}
=======
    
module Hello {}
    
>>>>>>> Stashed changes
[["suppress-warning"]] // error
